--- a/less/index.less
+++ b/less/index.less
@@ -329,7 +329,7 @@
 	bottom:220/@ppr;
 	margin:0 auto;
 	width:640/@ppr;
-	height:870/@ppr;
+	height:670/@ppr;
 	text-align:center;
 	h2{ 
 		padding-top:30/@ppr;
@@ -469,8 +469,8 @@
 }
 .PG_footer{
 	position:relative;
-	bottom:200/@ppr;
-	// margin:0 auto;
+	top:10/@ppr;
+	margin:0 auto;
 	margin-bottom:0;
 	width: 640/@ppr;
 	height: 525/@ppr;
