--- a/less/index.less
+++ b/less/index.less
@@ -402,6 +402,7 @@
 				}
 				li:nth-child(2){
 					width:150/@ppr;
+
 					input{
 						width:80/@ppr;
 						border: 1/@ppr solid red;
@@ -430,6 +431,14 @@
 					display:inline-block;
 					margin-right:40/@ppr;
 					letter-spacing:20/@ppr;
+				}
+				label{
+					line-height:1.8;
+				}
+				label:nth-child(2){
+					display:inline-block;
+					position:relative;
+					left:5/@ppr;
 				}
 				label:nth-child(3){
 					display:inline-block;
@@ -469,11 +478,10 @@
 }
 .PG_footer{
 	position:relative;
-	top:10/@ppr;
 	margin:0 auto;
 	margin-bottom:0;
 	width: 640/@ppr;
-	height: 525/@ppr;
+	height: 517/@ppr;
 	text-align: center;
 	background:url("@{bg}/bg_footer.jpg") no-repeat;
 	background-size:100%;
@@ -505,7 +513,7 @@
 		margin: auto;
 		right:50%;
         margin-right: -320/@ppr;
-		bottom:30/@ppr;
+		bottom:40/@ppr;
 		width:640/@ppr;
 		height:23/@ppr;
 		// line-height:1.4;
