--- a/css/index.css
+++ b/css/index.css
@@ -77,10 +77,10 @@
   color: yellow;
   text-decoration: underline;
 }
-.PG_banner .from_cell {
+.PG_banner .from_input {
   margin-top: 0.46875rem;
 }
-.PG_banner .from_cell input {
+.PG_banner .from_input input {
   width: 7.75rem;
   height: 1.34375rem;
   border: 1px solid #ccc;
@@ -223,7 +223,7 @@
   height: 16.890625rem;
   text-align: center;
   color: white;
-  background: url("../img/bg_setp1.jpg") no-repeat;
+  background: url("../img/bg_setp1.png") no-repeat;
   background-size: 100%;
 }
 .PG_septOne h2 {
@@ -234,7 +234,7 @@
   font-size: 0.46875rem;
 }
 .PG_septOne .septOne_desc {
-  margin-top: 5.1875rem;
+  margin-top: 2.8125rem;
   margin-left: 0.78125rem;
   width: 8.4375rem;
   height: 6.25rem;
@@ -243,24 +243,47 @@
 .PG_septOne .septOne_desc ul li {
   display: inline-block;
   text-align: center;
+  width: 3.90625rem;
+  height: 3.90625rem;
+}
+.PG_septOne .septOne_desc ul li img {
+  display: block;
+  width: 2.25rem;
+  height: 2.046875rem;
+  margin-left: 1.015625rem;
+  background-size: 100%;
+}
+.PG_septOne .septOne_desc ul li p {
+  display: inline-block;
+  margin-top: 0.46875rem;
+}
+.PG_septOne .septOne_desc ul li:nth-child(1) img {
+  width: 2.09375rem;
+  height: 2.015625rem;
+}
+.PG_septOne .septOne_desc ul li:nth-child(2) img {
+  width: 2.015625rem;
+  height: 2rem;
+}
+.PG_septOne .septOne_desc ul li:nth-child(2) p {
   width: 3.59375rem;
-  height: 1.09375rem;
-}
-.PG_septOne .septOne_desc ul li:nth-child(1) {
-  margin-left: -0.46875rem;
-}
-.PG_septOne .septOne_desc ul li:nth-child(2) {
-  width: 4.375rem;
-  padding-left: 0.78125rem;
 }
 .PG_septOne .septOne_desc ul li:nth-child(3) {
-  margin-left: -0.3125rem;
-  padding-top: 4.0625rem;
+  margin-top: 1.40625rem;
+}
+.PG_septOne .septOne_desc ul li:nth-child(3) img {
+  width: 2.21875rem;
+  height: 2.015625rem;
 }
 .PG_septOne .septOne_desc ul li:nth-child(4) {
-  width: 4.84375rem;
-  padding-top: 4.0625rem;
-  padding-left: 0.78125rem;
+  margin-top: 1.40625rem;
+}
+.PG_septOne .septOne_desc ul li:nth-child(4) img {
+  width: 2.25rem;
+  height: 2.046875rem;
+}
+.PG_septOne .septOne_desc ul li:nth-child(4) p {
+  width: 3.984375rem;
 }
 .PG_septTwo {
   position: relative;
@@ -385,38 +408,71 @@
   border: 0.015625rem solid red;
   border-radius: 0.078125rem;
 }
-.PG_from .form_cell form .time-form-group {
+.PG_from .form_cell form .time-form-group-up {
+  position: relative;
   margin-top: 0.625rem;
   margin-left: 0.46875rem;
-  width: 6.25rem;
-  height: 1.21875rem;
   font-size: 0.375rem;
+  width: 7.34375rem;
+  height: 0.359375rem;
+  line-height: 0.359375rem;
+  text-align: left;
 }
-.PG_from .form_cell form .time-form-group span {
-  display: inline-block;
-  margin-right: 0.625rem;
-  letter-spacing: 0.3125rem;
-}
-.PG_from .form_cell form .time-form-group label {
-  line-height: 1.8;
-}
-.PG_from .form_cell form .time-form-group label:nth-child(2) {
-  display: inline-block;
+.PG_from .form_cell form .time-form-group-up h4 {
   position: relative;
-  left: 0.078125rem;
-}
-.PG_from .form_cell form .time-form-group label:nth-child(3) {
   display: inline-block;
-  margin-left: 2.109375rem;
+  margin-right: 0.3125rem;
+  width: 1.40625rem;
+  height: 0.359375rem;
+  line-height: 0.359375rem;
+  letter-spacing: 0.3125rem;
+  font-size: 0.375rem;
+  font-weight: 400;
+}
+.PG_from .form_cell form .time-form-group-up label {
+  margin-right: 0.3125rem;
+}
+.PG_from .form_cell form .time-form-group-up label span {
+  display: inline-block;
+  margin-left: 0.3125rem;
+}
+.PG_from .form_cell form .time-form-group-down {
+  position: relative;
+  margin-top: 0.625rem;
+  margin-left: 2.34375rem;
+  font-size: 0.375rem;
+  width: 7.34375rem;
+  height: 0.359375rem;
+  line-height: 0.359375rem;
+  text-align: left;
+}
+.PG_from .form_cell form .time-form-group-down label {
+  margin-right: 0.359375rem;
+}
+.PG_from .form_cell form .time-form-group-down label span {
+  display: inline-block;
+  margin-left: 0.3125rem;
 }
 .PG_from .form_cell form .way-form-group {
   margin-top: 0.625rem;
+  margin-left: 0.46875rem;
+  height: 0.359375rem;
+  line-height: 0.359375rem;
   font-size: 0.375rem;
+  text-align: left;
 }
-.PG_from .form_cell form .way-form-group span {
+.PG_from .form_cell form .way-form-group h4 {
   display: inline-block;
   position: relative;
-  right: 0.625rem;
+  margin-right: 0.25rem;
+  font-size: 0.375rem;
+  font-weight: 400;
+}
+.PG_from .form_cell form .way-form-group label {
+  margin-right: 0.3125rem;
+}
+.PG_from .form_cell form .way-form-group label span {
+  margin-left: 0.3125rem;
 }
 .PG_from .form_cell form .commit-btn {
   margin-top: 0.78125rem;
@@ -468,6 +524,6 @@
   width: 10rem;
   height: 0.359375rem;
   color: white;
-  font-size: 0.1875rem;
+  font-size: 0.265625rem;
   text-align: center;
 }
